# ai-agent-directory

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: web_scraper.yml
ai_tools_web_scraper/: scrapper.py
backend/: .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  Readme.md  docker-compose.yml  pyproject.toml  pytest.ini
backend/.gtihub/workflows/: precommit-hook.yml
backend/alembic/: env.py
backend/alembic/versions/: 0bf8ae238247_add_default_0_to_trending.py  210296102845_update.py  48fcc7f42a09_update.py  56789caf548f_created_db_model.py  9e406cb2a3cf_migrate_db.py  9fc7de7517f6_change_trending_to_boolean.py
backend/app/: app.py  database.py  fake_data.py  models.py  schemas.py
backend/app/api/route/: agent.py  highlight.py  login.py  review.py  user.py
backend/app/api/schema/: __init__.py  validate.py
backend/app/api/utils/: create_initial_admin.py
backend/app/auth/: auth.py  bearer.py  dependency.py
backend/app/core/: database.py
backend/app/core/models/: agent.py  highlight.py  rating.py  reveiw.py  review.py  user.py
backend/app/schema/: agent.py  highlight.py  review.py  user.py
backend/app/tests/: test_agent_route.py  test_db.py  test_dummy.py  test_models.py
downloads/: 20250605_122836_ai_tools_scraped.csv  20250605_182621_ai_tools_scraped.csv.310dDecB  20250703_122835_ai_tools_scraped.csv
etl/: README_data_engineering.md  ai_tools_scraped.csv  ai_tools_scraped.json  etl_job.ipynb  idempotent_etl_job.py  load_seed_data.py  model.py  models.py  scraper.ipynb  scrapper.ipynb  web_scraper.py
etl/data/: 01-06-2025_ai_tools_scraped.csv  20250601_010921_ai_tools_scraped.csv  20250601_213652_ai_tools_scraped.csv  20250604_212453_ai_tools_scraped.csv  29-05-2025_ai_tools_scraped.json  Ai_tools_list.csv  ai_tools_scraped.json
etl/downloads/: 20250601_231255_ai_tools_scraped.csv  20250601_234748_ai_tools_scraped.csv  20250604_215747_ai_tools_scraped.csv  20250605_010655_ai_tools_scraped.csv  20250605_062056_ai_tools_scraped.csv  20250605_122836_ai_tools_scraped.csv  (+112 more)
(+7 files in other folders)
