[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["team_software_engineering"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.41"
psycopg2 = "^2.9.10"
fastapi = "^0.115.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
